--- a/stylesheets/coffee.css
+++ b/stylesheets/coffee.css
@@ -1,17 +1,56 @@
 
-h2 {
-	font-size:3em;
+body {
+	background:#1c1c1c;
 	font-family: 'Lato', sans-serif;
+	margin:0px;
+	padding:0px;
+}
+fieldset {
+	border-width:0px;
+	margin: 0px;
+	padding: 0px;
+	
 }
 
+#title {
+	background:#dddddd;
+	text-align: left;
+	
+}
+
+#title select {
+	font-family:inherit;
+	font-size:inherit;
+	font-weight:inherit;
+	color:#1c1c1c;
+	background:inherit;
+	border:0px;
+	padding-right:0.3em;
+	text-align:right;
+}
+
+h2 {
+	font-size:2.25em;
+	color:#555555;
+	padding:0.3em 0.3em 0.3em 0.3em ;
+	margin: 0em;
+}
+form {
+	margin:0em;
+	padding:0em;
+}
+
+
 #page {
-	width:1000px;
+	margin:0em;
+	padding:0em;
+	width:100%;
 }
 
 #graphic {
-	width:90%;
+	width:100%;
 	height:500px;
-	display:none;
+	color: #777777;
 }
 
 #chartdiv {
@@ -22,12 +61,13 @@ h2 {
 
 #yaxislabel {
 	text-align:left;
+	margin: 1em;
 }
 
 #xaxislabel {
 	text-align:center;
 	height: 3em;
-	width: 100%;
+	width: 800px;
 	
 }
 
